fixed spacing for about me

--- a/style.css
+++ b/style.css
@@ -259,5 +259,5 @@ footer div.container p {
 
 .member {
   display: inline-block;
-  height: 300px;
+  height: 400px;
 }
